<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.6</version>
		<relativePath />
	</parent>

	<groupId>io.github.arlol</groupId>
	<artifactId>mvnx</artifactId>
	<version>${revision}</version>

	<scm>
		<connection>scm:git:https://github.com/ArloL/mvnx</connection>
		<developerConnection>scm:git:https://github.com/ArloL/mvnx</developerConnection>
		<tag>${sha1}</tag>
		<url>https://github.com/ArloL/mvnx</url>
	</scm>

	<licenses>
		<license>
			<name>MIT License</name>
			<url>http://opensource.org/licenses/MIT</url>
		</license>
	</licenses>

	<properties>
		<java.version>25</java.version>
		<sha1>HEAD</sha1>
		<revision>0.0.1-SNAPSHOT</revision>
		<start-class>io.github.arlol.mvnx.MavenExecutor</start-class>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<executions>
					<execution>
						<id>enforcer-enforce</id>
						<goals>
							<goal>enforce</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<rules>
						<requireMavenVersion>
							<version>3.5</version>
						</requireMavenVersion>
						<requirePluginVersions />
						<bannedDependencies>
							<excludes>
                                <!-- disallow all system scope dependencies -->
								<exclude>*:*:*:*:system</exclude>
							</excludes>
						</bannedDependencies>
						<reactorModuleConvergence />
						<banDuplicatePomDependencyVersions />
					</rules>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>de.smartics.rules</groupId>
						<artifactId>smartics-enforcer-rules</artifactId>
						<version>1.0.2</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
				<version>1.7.3</version>
				<configuration>
					<updatePomFile>true</updatePomFile>
					<flattenMode>resolveCiFriendliesOnly</flattenMode>
				</configuration>
				<executions>
					<execution>
						<id>flatten-clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
					<execution>
						<id>flatten-flatten</id>
						<phase>process-resources</phase>
						<goals>
							<goal>flatten</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>net.revelc.code.formatter</groupId>
				<artifactId>formatter-maven-plugin</artifactId>
				<version>2.29.0</version>
				<configuration>
					<configFile>${project.basedir}/.settings/code-formatter-profile.xml</configFile>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>format</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-maven-plugin</artifactId>
				<version>4.9.8.3</version>
				<configuration>
					<effort>Max</effort>
					<threshold>Low</threshold>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.gaul</groupId>
				<artifactId>modernizer-maven-plugin</artifactId>
				<version>3.3.0</version>
				<configuration>
					<javaVersion>${java.version}</javaVersion>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>modernizer</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<doclint>-missing</doclint>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>com.github.iarellano</groupId>
				<artifactId>replacer</artifactId>
				<version>1.6.0</version>
				<executions>
					<execution>
						<goals>
							<goal>replace</goal>
						</goals>
						<phase>package</phase>
					</execution>
				</executions>
				<configuration>
					<regex>false</regex>
					<files>
						<file>src/main/resources/java-shell-shebang-template.txt</file>
					</files>
					<outputFiles>
						<outputFile>${project.build.directory}/${project.artifactId}-java-${project.version}</outputFile>
					</outputFiles>
					<replacements>
						<replacement>
							<token>@java.version@</token>
							<value>${java.version}</value>
						</replacement>
						<replacement>
							<token>@java.file@</token>
							<valueFile>src/main/java/io/github/arlol/mvnx/MavenExecutor.java</valueFile>
						</replacement>
					</replacements>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-resources-plugin</artifactId>
					<configuration>
						<propertiesEncoding>ISO-8859-1</propertiesEncoding>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.22.0</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.junit.vintage</groupId>
					<artifactId>junit-vintage-engine</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.github.spotbugs</groupId>
			<artifactId>spotbugs-annotations</artifactId>
			<version>4.9.8</version>
			<optional>true</optional>
		</dependency>
	</dependencies>

</project>
